--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <p class=cent>
           <button
             class=cta-big
-            formaction=https://buy.stripe.com/dR615g7hL0Mjeek5kx
+            formaction=https://buy.stripe.com/7sI8xIeKd1Qn3zG28H
           >Buy Expert Tier</button>
         </p>
       </fieldset>
