--- a/index.html
+++ b/index.html
@@ -241,6 +241,21 @@
       top: -50vh;
     }
   </style>
+  <style>
+    iframe {
+      width: 100%;
+      min-height: 100%;
+      height: 100%;
+      display: block;
+      margin: 0;
+      padding: 0;
+      border: 0;
+    }
+
+    iframe:not(.active) {
+      display: none;
+    }
+  </style>
   <title>Free Browsers | VF Individual Demo</title>
   <main>
     <header>
@@ -317,13 +332,20 @@
         </fieldset>
       </form>
     </section>
+    <section class="browser">
+      <iframe 
+        class=remote-browser-portal
+        src=/loading.html
+        frameborder=0
+      ></iframe>
+    </section>
   </main>
 <script>
   {
     const API = 'https://demo-vfp.dosyago.com/v1';
     const TokenURL = () => new URL(`${API}/token`);
     const PayURL = () => new URL(`${API}/paid`);
-    const ReceiveURL = () => new URL(`${API}/fulfill`);
+    const StartURL = () => new URL(`${API}/start`);
     const Steps = [
       {
         url: TokenURL,
@@ -331,6 +353,29 @@
           method: 'POST'
         })
       },
+      {
+        url: PayURL,
+        request: token => ({
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${token}`
+          }, 
+          body: JSON.stringify({
+            payment_intent: 'synthetic-demo'
+          })
+        })
+      },
+      {
+        url: StartURL,
+        request: token => ({
+          method: 'POST',
+          headers: {
+            'Authorization': `Bearer ${token}`
+          }, 
+        }),
+        type: 'json'
+      }
     ];
 
     self.loadBrowser = loadBrowser;
@@ -340,6 +385,7 @@
 
       event.target.querySelector('button').disabled = true;
 
+      const frame = document.documentElement.querySelector('iframe.remote-browser-portal');
       let failed = false;
       let previous;
 
@@ -357,12 +403,20 @@
       }
 
       if ( !failed ) {
-        alert('Starting browser');
-        alert(JSON.stringify(previous, null, 2));
+        const {loginUrl} = previous;
+        frame.setAttribute('src', loginUrl);
+        frame.classList.add('active');
+        setTimeout(() => {
+            frame.scrollIntoView();
+            event.target.querySelector('button').disabled = false;
+          },
+          200
+        );
       }
 
-      setTimeout(
-        () => event.target.querySelector('button').disabled = false,
+      setTimeout(() => {
+          event.target.querySelector('button').disabled = false;
+        },
         500
       );
 
