--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <style>
     iframe {
       width: 100%;
-      min-height: 100%;
+      min-height: 100vh;
       height: 100%;
       display: block;
       margin: 0;
