--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
   <style>
     iframe {
       width: 100%;
-      min-height: 100vh;
+      min-height: calc(100vh - 6em);
+      max-height: calc(100vh - 3em);
       height: 100%;
       display: block;
       margin: 0;
