--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
       target.addEventListener('pointerenter', lockScroll);
       target.addEventListener('pointerleave', unlockScroll);
       globalThis.addEventListener('wheel', wheeling => {
+        console.log(locked, wheeling);
         if ( locked ) wheeling.preventDefault();
       });
     }
