--- a/index.html
+++ b/index.html
@@ -428,15 +428,19 @@
     }
     
     function installScrollLock(target) {
+      target.addEventListener('mouseenter', lockScroll);
+      target.addEventListener('mouseleave', lockScroll);
       target.addEventListener('pointerenter', lockScroll);
       target.addEventListener('pointerleave', unlockScroll);
       globalThis.addEventListener('wheel', wheeling => {
+        console.log(locked, wheeling);
         if ( locked ) wheeling.preventDefault();
       }, {passive: false, capture: true});
     }
 
     function lockScroll() {
       locked = true;
+      console.log('locked', locked);
       if ( isMobile() ) {
         document.documentElement.style.overflow = 'hidden';
       }
@@ -444,6 +448,7 @@
 
     function unlockScroll() {
       locked = false;
+      console.log('locked', locked);
       if ( isMobile() ) {
         document.documentElement.style.overflow = 'auto';
       }
