--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       margin-bottom: var(--gold);
       padding: 0.5em;
       
-      background: linear-gradient(to right, var(--springgreen), var(--turquoise));
+      background: linear-gradient(to left, var(--springgreen), var(--turquoise));
 
       display: block;
     }
@@ -71,7 +71,7 @@
 
     header h1 a {
       text-decoration: none;
-      color: var(--white);
+      color: var(--deep);
       font-weight: 300;
       letter-spacing: normal;
     }
