--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <dd>Many <a href=https://github.com/i5ik/ViewFinder#progress--roadmap>more features</a>
           </dl>
           <p class=cent>
-            <button class=free-do>Try it now</button>
+            <button class=free-do>Try right now</button>
           </p>
         </fieldset>
       </form>
