--- a/loading.html
+++ b/loading.html
@@ -1,1 +1,1 @@
-<marquee><h1 style="font-family: system-ui, monospace;">Starting the Internet...</h1></marquee>
+<marquee><h1 style="font-family: system-ui, monospace;">Booting up the Information Superhighway...</h1></marquee>
