--- a/index.html
+++ b/index.html
@@ -244,12 +244,13 @@
   </style>
   <style>
     iframe {
+      box-sizing: border-box;
       width: 100%;
       min-height: calc(100vh - 6em);
       max-height: calc(100vh - 3em);
       height: 100%;
       display: block;
-      margin: 0;
+      margin: 0 1em;
       padding: 0;
       border: 0;
     }
@@ -400,7 +401,7 @@
         const resp = await fetch(url(previous), request(previous));
         if ( resp.error || ! resp.ok ) {
           failed = true;
-          const message = `Auth failed: ${resp.error}`;
+          const message = `Auth failed (${resp.status}: ${resp.statusText}): ${resp.error}`;
           console.warn(message);
           alert(message);
           break;
