--- a/index.html
+++ b/index.html
@@ -245,12 +245,13 @@
   <style>
     iframe {
       box-sizing: border-box;
-      width: 100%;
+      width: calc(100vw - 1.25em);
       min-height: calc(100vh - 6em);
       max-height: calc(100vh - 3em);
       height: 100%;
       display: block;
-      margin: 0 1em;
+      margin: 0; 
+      margin-right: 1.25em;
       padding: 0;
       border: 0;
     }
