--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      max-width: calc(100vw - 1.25em);
     }
 
     section.try-or-buy form {
