--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         const resp = await fetch(url(previous), request(previous));
         if ( resp.error || ! resp.ok ) {
           failed = true;
-          const message = `Auth failed (${resp.status}: ${resp.statusText}): ${resp.error}`;
+          const message = `Auth failed (${resp.status}: ${resp.statusText}): ${resp.error || 'error'}`;
           console.warn(message);
           alert(message);
           break;
