--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       --softer: whitesmoke;
 
       --blue: dodgerblue;
+      /* https://johncarlosbaez.wordpress.com/2022/01/16/the-color-of-infinite-temperature/ */
+      --sky: #94b1ff; 
+
       --green: chartreuse;
       --red: deeppink;
 
@@ -37,7 +40,7 @@
     }
 
     :root {
-      background: var(--white);
+      background: var(--sky);
       font-family: var(--font);
     }
 
