--- a/loading.html
+++ b/loading.html
@@ -1,1 +1,8 @@
+<style>
+  body {
+    margin: 2rem;
+    display: flex;
+    align-items: center;
+  }
+</style>
 <marquee><h3 style="font-family: system-ui, monospace;">Booting the Internet...</h3></marquee>
