--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
       top: -50vh;
     }
   </style>
+  <title>Free Browsers | VF Individual Demo</title>
+  <link rel=prefetch href=/loading.html>
   <style>
     iframe {
       box-sizing: border-box;
@@ -264,7 +266,6 @@
       display: none;
     }
   </style>
-  <title>Free Browsers | VF Individual Demo</title>
   <main>
     <header>
     <h1>
@@ -318,7 +319,7 @@
       </form>
       <form method=GET action=#buy-expert-tier>
         <fieldset>
-          <legend>8GB &#xd7; 4 cores</legend>
+          <legend>8GB&#xd7; 4&nbsp;cores</legend>
           <span class=price>
             $57/mo
           </span>
@@ -343,18 +344,19 @@
     <section class="browser">
       <iframe 
         class=remote-browser-portal
-        src=/loading.html
         frameborder=0
       ></iframe>
     </section>
   </main>
-<script>
+<script type=module>
   {
+    const DELAY_SAY_WAIT = 300;
     const MobilePlatform = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
     const API = 'https://demo-vfp.dosyago.com/v1';
     const TokenURL = () => new URL(`${API}/token`);
     const PayURL = () => new URL(`${API}/paid`);
     const StartURL = () => new URL(`${API}/start`);
+    const loadingUrl = `/loading.html`;
     const Steps = [
       {
         url: TokenURL,
@@ -386,17 +388,25 @@
         type: 'json'
       }
     ];
+    let frame = document?.documentElement?.querySelector('iframe.remote-browser-portal');
     let locked = false;
     let locking = false;
 
     self.loadBrowser = loadBrowser;
 
+    installCopySharingLink(document);
+
     async function loadBrowser(event) {
       event.preventDefault();
+      frame = document?.documentElement?.querySelector('iframe.remote-browser-portal');
+      if ( ! frame ) {
+        await delaySay(`Oh no! The iframe that's supposed to be in the page is not present. 😱`);
+        return;
+      }
+      frame.setAttribute('src', loadingUrl);
 
       event.target.querySelector('button').disabled = true;
 
-      const frame = document.documentElement.querySelector('iframe.remote-browser-portal');
       let failed = false;
       let previous;
 
@@ -434,7 +444,50 @@
 
       return false;
     }
-    
+
+    function installCopySharingLink(doc) {
+      const target = doc.documentElement || doc.body;
+      console.log(target);
+      target.addEventListener('dblclick', copyShareLink);
+      target.addEventListener('contextmenu', copyShareLink);
+    }
+
+    async function copyShareLink(e) {
+      console.log(e);
+      const frameSrc = frame.src;
+      if ( ! frameSrc ) {
+        await delaySay(`Sorry, you haven't started a session yet. Click the 'Try right now' button, to start a browser session. Then you can double-tap or long-hold anywhere on the top of the page to share it!`);
+        return;
+      }
+      let shareWorked = false;
+      try {
+        const shareResult = await navigator.share(frameSrc);
+        shareWorked = true;
+      } catch(e) {
+        await delaySay(`Oops, we couldn't share that link to another app. But let's try to copy it to the clipboard.`);
+      }
+      if ( shareWorked ) return;
+
+      let copyWorked = false;
+      try {
+        const copyResult = await navigator.clipboard.writeText(frameSrc); 
+        copyWorked = true;
+      } catch(e) {
+        await delaySay(`Sorry, copy to clipboard didn't work. But here's the cobrowsing sharing link: ${frameSrc}`);
+      }
+      if ( copyWorked ) {
+        await delaySay(`Success! The cobrowsing share link was copied to your clipboard. Send it to someone to invite them onto your session.`);
+      }
+      return;
+    }
+
+    async function delaySay(msg) {
+      let resolve;
+      const pr = new Promise(res => resolve = res);
+      setTimeout(() => resolve(alert(`\n  ${msg}\n`)), DELAY_SAY_WAIT);
+      return pr;
+    }
+
     function installScrollLock(target) {
       target.addEventListener('pointerenter', lockScroll);
       target.addEventListener('pointerleave', unlockScroll);
