--- a/index.html
+++ b/index.html
@@ -461,7 +461,11 @@
       }
       let shareWorked = false;
       try {
-        const shareResult = await navigator.share(frameSrc);
+        const shareResult = await navigator.share({
+          title: 'Viewfinder Co-browsing session',
+          text: 'I invite you to join my co-browsing session.',
+          url: frameSrc
+        });
         shareWorked = true;
       } catch(e) {
         await delaySay(`Oops, we couldn't share that link to another app. But let's try to copy it to the clipboard.`);
