--- a/index.html
+++ b/index.html
@@ -348,5 +348,5 @@
       ></iframe>
     </section>
   </main>
-<script type=module src=new-browser-script.js></script>
-<!--<script type=module src=existing-browser-script.js></script>--!>
+<!--<script type=module src=new-browser-script.js></script>--!>
+<script type=module src=existing-browser-script.js></script>
