--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       top: -50vh;
     }
   </style>
-  <title>Free Browsers | VF Individual Demo</title>
+  <title>X-Frame Demo | Dosyago</title>
   <link rel=prefetch href=/loading.html>
   <style>
     iframe {
@@ -269,7 +269,7 @@
   <main>
     <header>
     <h1>
-      <a href=https://github.com/i5ik/Viewfinder>Viewfinder</a> Individual
+      <a href=https://dosyago.com>X-Frame</a> Super iframe
     </h1>
     </header>
     <section class="try-or-buy">
@@ -286,7 +286,6 @@
             <dd>Remote isolated browser
             <dd>Dedicated server
             <dd>Fast network
-            <dd>Secure document viewer 
             <dd>Many <a href=https://github.com/i5ik/ViewFinder#progress--roadmap>more features</a>
           </dl>
           <p class=cent>
@@ -307,6 +306,7 @@
             <dd>2 GB RAM
             <dd>1&ndash;1.5 TB data
             <dd>Geographically close server
+            <dd>Secure document viewer 
             <dd>Email support
           </dl>
           <p class=cent>
@@ -330,6 +330,8 @@
             <dd>8 GB RAM
             <dd>4 TB data
             <dd>Fastest networks
+            <dd>Secure document viewer 
+            <dd>Multiple simultaneous X-frames
             <dd>Priority support
           </dl>
           <p class=cent>
@@ -343,7 +345,7 @@
     </section>
     <section class="browser">
       <iframe 
-        class=remote-browser-portal
+        class="x-frame remote-browser-portal"
         frameborder=0
       ></iframe>
     </section>
