--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       top: -50vh;
     }
   </style>
-  <title>X-Frame Demo | Dosyago</title>
+  <title>X-Frame Demo & Plans | Dosyago</title>
   <link rel=prefetch href=/loading.html>
   <style>
     iframe {
