--- a/index.html
+++ b/index.html
@@ -226,6 +226,14 @@
       background: transparent;
       color: white;
     }
+    footer {
+      text-align: center;
+      font-size: x-small;
+      color: white;
+    }
+    footer a {
+      color: white;
+    }
   </style>
   <style>
     .decor {
@@ -342,6 +350,13 @@
           </p>
         </fieldset>
       </form>
+      <form>
+        <p class=cent>
+          <strong>Need more options?</strong>
+          <br>
+          <a href=mailto:cris@dosycorp.com?subject=X-frame%20Options&body=Hi%20Cris>Email support.</a>
+        </p>
+      </form>
     </section>
     <section class="browser">
       <iframe 
@@ -350,5 +365,12 @@
       ></iframe>
     </section>
   </main>
+  <footer>
+    &copy; The Dosyago Corporation 2022 |
+    <a target=_blank href=https://dosyago.com/privacy.txt>privacy</a> |
+    <a target=_blank href=https://dosyago.com/terms.txt>terms</a> |
+    <a target=_blank 
+      href="mailto:cris@dosycorp.com?subject=Music%20Mode%20Support&body=Hi%20Cris,">support</a> 
+  </footer>
 <!--<script type=module src=new-browser-script.js></script>--!>
 <script type=module src=existing-browser-script.js></script>
