--- a/index.html
+++ b/index.html
@@ -331,15 +331,12 @@
           <span class=price>
             $57/mo
           </span>
-          <strong>Everything in Free PLUS</strong>
+          <strong>Everything in Basic PLUS</strong>
           <dl>
-            <dd>Single-tenant server
-            <dd>4 vCPU cores
-            <dd>8 GB RAM
-            <dd>4 TB data
+            <dd>Extra 3 TB data 
             <dd>Fastest networks
             <dd>Secure document viewer 
-            <dd>Multiple simultaneous X-frames
+            <dd>Multiple concurrent X-frames
             <dd>Priority support
           </dl>
           <p class=cent>
