--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
   <main>
     <header>
     <h1>
-      <a href=https://dosyago.com>X-Frame</a> a super iframe
+      <a href=https://dosyago.com>X-Frame</a> Super iframe
     </h1>
     </header>
     <section class="try-or-buy">
