--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <dd>Low latency rendering
             <dd>Remote isolated browser
             <dd>Dedicated server
-            <dd>Fast network
+            <dd>Adobe Flash support
             <dd>Many <a href=https://github.com/i5ik/ViewFinder#progress--roadmap>more features</a>
           </dl>
           <p class=cent>
@@ -310,8 +310,8 @@
           <strong>Everything in Free PLUS</strong>
           <dl>
             <dd>Single-tenant server
-            <dd>1 vCPU core
-            <dd>2 GB RAM
+            <dd>1 CPU 2GB RAM
+            <dd>Co-browsing
             <dd>1&ndash;1.5 TB data
             <dd>Geographically close server
             <dd>Email support
