--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <strong>Everything in Basic PLUS</strong>
           <dl>
             <dd>Extra 3 TB data 
-            <dd>Fastest networks
+            <dd>+3 CPU / +7GB RAM
             <dd>Secure document viewer 
             <dd>Multiple concurrent X-frames
             <dd>Priority support
