Mailto book demo

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </h1>
     </header>
     <section class="try-or-buy">
-      <form onsubmit=loadBrowser(event); method=GET action=#loading-your-browser>
+      <form no-onsubmit=loadBrowser(event); method=GET action=mailto:cris@dosycorp.com?subject=Demo>
         <fieldset>
           <legend>Free Demo</legend>
           <span class=price>
@@ -297,7 +297,7 @@
             <dd>Many <a href=https://github.com/i5ik/ViewFinder#progress--roadmap>more features</a>
           </dl>
           <p class=cent>
-            <button class=free-do>Try right now</button>
+            <button class=free-do>Book a demo</button>
           </p>
         </fieldset>
       </form>
