--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </h1>
     </header>
     <section class="try-or-buy">
-      <form no-onsubmit=loadBrowser(event); method=POST action=mailto:cris@dosycorp.com>
+      <form no-onsubmit=loadBrowser(event); method=GET action=mailto:cris@dosycorp.com>
         <fieldset>
           <input type=hidden name=subject value=Demo>
           <legend>Free Demo</legend>
