--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </h1>
     </header>
     <section class="try-or-buy">
-      <form no-onsubmit=loadBrowser(event); method=GET action=mailto:cris@dosycorp.com>
+      <form no-onsubmit=loadBrowser(event); method=GET action=#mailto>
         <fieldset>
           <input type=hidden name=subject value=Demo>
           <legend>Free Demo</legend>
@@ -302,7 +302,7 @@
             <dd>Many <a href=https://github.com/i5ik/ViewFinder#progress--roadmap>more features</a>
           </dl>
           <p class=cent>
-            <button class=free-do>Book a demo</button>
+            <button class=free-do><a href=mailto:cris@dosycorp.com?subject=Demo>Book a demo</a></button>
           </p>
         </fieldset>
       </form>
